--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "opencv": "~0.3.1",
     "socket.io": "~0.9.16",
-    "johnny-five": "~0.7.31"
+    "johnny-five": "~0.7.31",
+    "speaker": "~0.1.0",
+    "lame": "~1.0.3"
   },
   "devDependencies": {},
   "scripts": {
