--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "time-space",
-  "version": "0.0.1",
-  "description": "Rat torturer",
+  "name": "arenomat",
+  "version": "0.0.2",
+  "description": "Arena automat",
   "main": "app.js",
   "dependencies": {
     "opencv": "~0.3.1",
@@ -16,5 +16,5 @@
   },
   "author": "Majkl",
   "license": "MIT",
-  "homepage": "https://github.com/majklovec"
+  "homepage": "http://git.michalvondracek.cz/arenaomat.git"
 }
