--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "opencv": "peterbraden/node-opencv",
     "socket.io": "^0.9.16",
     "speaker": "~0.1.0",
-    "static-favicon": "~1.0.0",
+    "static-favicon": "~1.0.0"
   },
   "devDependencies": {
     "nodemon": "*"
