--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "~4.0.0",
     "hjs": "~0.0.6",
     "hogan-express": "^0.5.2",
-    "johnny-five": "~0.7.31",
+    "johnny-five": "rwaldron/johnny-five",
     "lame": "~1.0.3",
     "less-middleware": "0.1.15",
     "mongoose": "3.8.x",
