--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.0.0",
+    "function-enhancements": "^0.1.0",
     "hjs": "~0.0.6",
     "hogan-express": "^0.5.2",
     "johnny-five": "rwaldron/johnny-five",
