--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "static-favicon": "~1.0.0"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.3.3",
+    "grunt-contrib-uglify": "~0.4.0",
     "nodemon": "*"
   },
   "scripts": {
