--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "morgan": "~1.0.0",
     "opencv": "peterbraden/node-opencv",
     "socket.io": "^0.9.16",
-    "speaker": "~0.1.0",
+    "speaker": "0.1.0",
     "static-favicon": "~1.0.0"
   },
   "devDependencies": {
