install script path bug fix

--- a/install/arenomat.conf
+++ b/install/arenomat.conf
@@ -22,7 +22,7 @@ console output
 #setuid exampleuser
 
 # Application directory
-env APP=/home/exampleuser
+env APP=/data/arenomat
 
 # Now we run Forever, telling it to write its logs to
 # /tmp, and to run the script /opt/example/server.js
