--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Arena automat",
   "main": "app.js",
   "dependencies": {
+    "baudio": "^2.1.2",
     "body-parser": "~1.0.0",
     "canvas": "^1.1.3",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.0.0",
+    "express-session": "~1.8.1",
     "function-enhancements": "^0.1.0",
     "hjs": "~0.0.6",
     "hogan-express": "^0.5.2",
@@ -20,13 +23,11 @@
     "mongoose-timestamp": "^0.2.1",
     "morgan": "~1.0.0",
     "opencv": "peterbraden/node-opencv",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
     "socket.io": "^0.9.16",
     "speaker": "0.1.0",
-    "static-favicon": "~1.0.0",
-    "passport-local": "~1.0.0",
-    "passport": "~0.2.1",
-    "connect-flash": "~0.1.1",
-    "express-session": "~1.8.1"
+    "static-favicon": "~1.0.0"
   },
   "devDependencies": {
     "nodemon": "*"
