--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "express-session": "~1.8.1",
     "function-enhancements": "^0.1.0",
     "hjs": "~0.0.6",
+    "hogan": "^1.0.2",
     "hogan-express": "^0.5.2",
     "johnny-five": "rwaldron/johnny-five",
     "lame": "~1.0.3",
     "less-middleware": "0.1.15",
+    "moment": "^2.8.3",
     "mongoose": "3.8.x",
     "mongoose-paginate": "^2.2.0",
     "mongoose-timestamp": "^0.2.1",
