--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose-paginate": "^2.2.0",
     "mongoose-timestamp": "^0.2.1",
     "morgan": "~1.0.0",
+    "nan": "^1.3.0",
     "opencv": "peterbraden/node-opencv",
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
