--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "descriptive-statistics": "0.0.4",
     "express": "~4.0.0",
     "express-session": "~1.8.1",
     "function-enhancements": "^0.1.0",
