--- a/install/arenomat.conf
+++ b/install/arenomat.conf
@@ -28,5 +28,5 @@ env APP=/data/arenomat
 # /tmp, and to run the script /opt/example/server.js
 script
         cd $APP
-        exec forever start -a -l /tmp/forever.log -o /tmp/forever.stdout.log -e /tmp/forever.stderr.log /data/arenomat/app.js
+        exec pm2 start /data/arenomat/app.js
 end script
