--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "hjs": "~0.0.6",
     "hogan": "^1.0.2",
     "hogan-express": "^0.5.2",
-    "johnny-five": "rwaldron/johnny-five",
+    "johnny-five": "^0.9.14",
     "lame": "~1.2.3",
     "less-middleware": "0.1.15",
     "moment": "^2.8.3",
@@ -27,9 +27,10 @@
     "mongoose-timestamp": "^0.2.1",
     "morgan": "~1.0.0",
     "nan": "^1.3.0",
-    "opencv": "peterbraden/node-opencv",
+    "opencv": "^3.0.0",
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
+    "serialport": "^2.0.5",
     "socket.io": "^0.9.16",
     "speaker": "0.2.6",
     "static-favicon": "~1.0.0"
